--- a/package.json
+++ b/package.json
@@ -1,37 +1,34 @@
 {
-  "name": "react-example",
+  "name": "reactinfinitescroll",
   "version": "1.0.0",
-  "description": "Simple React example app",
+  "description": "React Infinite Scroll Example",
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --inline --content-base ./ --env.dev",
     "build": "webpack --env.prod",
-    "lint": "eslint app test",
-    "test": "cross-env NODE_ENV=test nyc mocha",
-    "watch:test": "mocha --watch --compilers js:babel-register",
+    "test": "",
     "start": "http-server",
-    "setup": "npm install && npm run validate",
-    "validate": "npm-run-all lint test build"
+    "setup": "npm install"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mzabriskie/react-example"
+    "url": "https://github.com/frayhan94/infinite-scroll"
   },
-  "author": "Matt Zabriskie",
+  "author": "Faris Rayhan",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mzabriskie/react-example/issues"
+    "url": "https://github.com/frayhan94/infinite-scroll/issues"
   },
-  "homepage": "https://github.com/mzabriskie/react-example",
+  "homepage": "https://github.com/frayhan94/infinite-scroll",
   "dependencies": {
     "axios": "0.13.1",
-    "bootstrap": "^3.3.5",
     "history": "^3.0.0",
     "moment": "^2.10.6",
     "react": "15.3.0",
     "react-dom": "15.3.0",
     "react-router": "2.6.1",
-    "react-tooltip": "3.1.5"
+    "react-tooltip": "3.1.5",
+    "superagent": "^4.0.0-beta.5"
   },
   "devDependencies": {
     "babel-core": "6.13.2",
